--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@loopback/rest": "^15.0.2",
     "@loopback/rest-explorer": "^8.0.2",
     "@loopback/service-proxy": "^8.0.1",
+    "dns": "^0.2.2",
     "loopback-connector-mongodb": "^6.3.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
