--- a/package.json
+++ b/package.json
@@ -49,22 +49,27 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^12.0.4",
     "@loopback/boot": "^8.0.2",
-    "@loopback/core": "^7.0.1",
-    "@loopback/repository": "^8.0.1",
-    "@loopback/rest": "^15.0.2",
+    "@loopback/core": "^7.0.2",
+    "@loopback/repository": "^8.0.2",
+    "@loopback/rest": "^15.0.3",
     "@loopback/rest-explorer": "^8.0.2",
     "@loopback/service-proxy": "^8.0.1",
     "dns": "^0.2.2",
+    "express": "^5.1.0",
     "loopback-connector-mongodb": "^6.3.1",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
-    "tslib": "^2.0.0"
+    "multer": "^2.0.1",
+    "tslib": "^2.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@loopback/build": "^12.0.1",
     "@loopback/eslint-config": "^16.0.0",
     "@loopback/testlab": "^8.0.1",
+    "@types/multer": "^2.0.0",
     "@types/node": "^16.18.126",
     "eslint": "^8.57.1",
     "source-map-support": "^0.5.21",
