--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "eslint": "lb-eslint --report-unused-disable-directives .",
     "eslint:fix": "npm run eslint -- --fix",
     "pretest": "npm run rebuild",
-    
     "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
     "posttest": "npm run lint",
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
@@ -57,6 +56,8 @@
     "@loopback/rest": "^15.0.3",
     "@loopback/rest-explorer": "^8.0.2",
     "@loopback/service-proxy": "^8.0.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "dns": "^0.2.2",
     "express": "^5.1.0",
     "loopback-connector-mongodb": "^6.3.1",
@@ -71,9 +72,12 @@
     "@loopback/build": "^12.0.1",
     "@loopback/eslint-config": "^16.0.0",
     "@loopback/testlab": "^8.0.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^16.18.126",
     "eslint": "^8.57.1",
+    "jsonwebtoken": "^9.0.2",
     "source-map-support": "^0.5.21",
     "typescript": "~5.2.2"
   }
