--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.6",
+    "resend": "^6.0.2",
     "stripe": "^18.4.0",
     "tslib": "^2.0.0",
     "uuid": "^11.1.0"
