--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.6",
+    "nodemon": "^3.1.10",
     "resend": "^6.0.2",
     "stripe": "^18.4.0",
     "tslib": "^2.0.0",
@@ -78,6 +79,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^16.18.126",
+    "@types/nodemailer": "^7.0.1",
     "eslint": "^8.57.1",
     "jsonwebtoken": "^9.0.2",
     "source-map-support": "^0.5.21",
